[gd_scene load_steps=3 format=3 uid="uid://c2a6m66dx10cy"]

[ext_resource type="Script" path="res://Scenes/menu/main_menu.gd" id="1_141c1"]
[ext_resource type="Texture2D" uid="uid://qfcvs2ruf0b4" path="res://img/LDG.png" id="2_vh4sg"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_141c1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_vh4sg")
expand_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="btnVersus" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Versus"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="btnButtonMap" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Remap Inputs"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/btnVersus" to="." method="_on_btn_versus_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/btnButtonMap" to="." method="_on_btn_button_map_pressed"]
